--- a/SignUpGenie/Views/_ViewImports.cshtml
+++ b/SignUpGenie/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 @using SignUpGenie
 @using SignUpGenie.Models
-@using SignUpGenie.Models.ViewModel @*add in view model*@
+@using SignUpGenie.Models.ViewModels
 @using SignUpGenie.Infrastructure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, SignUpGenie
