Update shared layout and home page

--- a/SignUpGenie/Views/Shared/_Layout.cshtml
+++ b/SignUpGenie/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-white float-right" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white float-right" asp-area="" asp-controller="Home" asp-action="">Book Tour</a>
+                            <a class="nav-link text-white float-right" asp-area="" asp-controller="Home" asp-action="">Book a Tour</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white float-right" asp-area="" asp-controller="Home" asp-action="Appointments">Scheduled Tours</a>
