--- a/SignUpGenie/Views/Home/Index.cshtml
+++ b/SignUpGenie/Views/Home/Index.cshtml
@@ -31,8 +31,8 @@
     </div>
     <br />
     <br />
-    <div>
-        <button class="btn btn-info btn-outline-light btn-lg text-white" asp-controller="Home" asp-action="">Book a Tour</button>
+    <div class="d-flex justify-content-center">
+        <button class="btn btn-info btn-lg text-white" asp-controller="Home" asp-action="">Book a Tour</button>
     </div>
 </div>
 
