--- a/SignUpGenie/Views/Home/Index.cshtml
+++ b/SignUpGenie/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
     <br />
     <br />
     <div>
-        <button class="btn btn-info btn-outline-light btn-lg text-white" asp-controller="Home" asp-action="">Book a Tour</button>
+        <button class="btn btn-info btn-outline-light btn-lg text-white"><a asp-controller="Home" asp-action="SignUp">Book a Tour</a></button>
     </div>
 </div>
 
