--- a/SignUpGenie/Views/Home/SignUp.cshtml
+++ b/SignUpGenie/Views/Home/SignUp.cshtml
@@ -1,17 +1,26 @@
-@model Tour
-
-<div class="ml-5">
-    <h1>Available Tours</h1>
-    @foreach (var t in Tour)
-    {
-        <div class="card card-outline-dark m-3 p-1">
-            <h4>@t.DateTime</h4>
-            <form id="@t.TourId" method="post">
-                <input type="hidden" asp-for="TourId"/>
-                <span class="card-text p-1">
-                    <button type="submit" class="btn-success btn-sm pull-right" style="float:right">Select Tour</button>
-                </span>
-            </form>
-        </div>
-    }
+@model IQueryable<Tour>
+<div class="row justify-content-md-center">
+    <div class="col-md-5" style="margin:auto">
+        <h1 class="text-center">Available Tours</h1>
+        @{ DateTime currentDate = DateTime.MinValue;}
+        @foreach (var t in Model)
+        {
+            if (t.DateTime.Date > currentDate.Date)
+            {
+                currentDate = t.DateTime;
+                <div class="card card-outline-dark ">
+                    <div class="card-body text-center">
+                        <h5>Date: @t.DateTime.ToLongDateString()</h5>
+                    </div>
+                </div>
+            }
+            <div class="card card-outline-dark m-3 p-1">
+                <div class="card-body">
+                    <span class="align-middle" style="line-height:38px;">Time: @t.DateTime.ToShortTimeString()</span>
+                    @Html.ActionLink("Select Tour", "Form", "Home", new { TourId = t.TourId }, new { @class = "btn btn-primary float-right align-middle", style = "width:40%;" })
+                </div>
+            </div>
+        }
+    </div>
 </div>
+
