--- a/SignUpGenie/Views/Home/Index.cshtml
+++ b/SignUpGenie/Views/Home/Index.cshtml
@@ -31,13 +31,8 @@
     </div>
     <br />
     <br />
-<<<<<<< HEAD
-    <div>
-        <button class="btn btn-info btn-outline-light btn-lg text-white"><a asp-controller="Home" asp-action="SignUp">Book a Tour</a></button>
-=======
     <div class="d-flex justify-content-center">
-        <button class="btn btn-info btn-lg text-white" asp-controller="Home" asp-action="">Book a Tour</button>
->>>>>>> main
+        <button class="btn btn-info btn-lg text-white"><a asp-controller="Home" asp-action="SignUp" class="text-white" style="text-decoration:none">Book a Tour</a></button>
     </div>
 </div>
 
