--- a/SignUpGenie/Views/Home/Form.cshtml
+++ b/SignUpGenie/Views/Home/Form.cshtml
@@ -11,22 +11,22 @@
                 <input class="form-control" asp-for="DateTime" value="@Model.DateTime.ToString("yyyy-MM-ddTHH:mm:ss")" readonly />
             </div>
             <div class="form-group">
-                <label asp-for="Group.Name">Group Name:</label>
-                <input class="form-control" asp-for="Group.Name" />
+                <label asp-for="Name">Group Name:</label>
+                <input class="form-control" asp-for="Name" />
             </div>
             <div class="form-group">
-                <label asp-for="Group.Size">Size of Group:</label>
-                <input class="form-control" asp-for="Group.Size" />
-            </div>
-
-            <div class="form-group">
-                <label asp-for="Group.Email">Email Address:</label>
-                <input class="form-control" asp-for="Group.Email" />
+                <label asp-for="Size">Size of Group:</label>
+                <input class="form-control" asp-for="Size" />
             </div>
 
             <div class="form-group">
-                <label asp-for="Group.Phone">Phone Number:</label>
-                <input class="form-control" asp-for="Group.Phone" />
+                <label asp-for="Email">Email Address:</label>
+                <input class="form-control" asp-for="Email" />
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Phone">Phone Number:</label>
+                <input class="form-control" asp-for="Phone" />
             </div>
 
             <button type="submit" class="btn btn-success">Book Tour</button>
