fixed phone number

--- a/SignUpGenie/Views/Home/Appointments.cshtml
+++ b/SignUpGenie/Views/Home/Appointments.cshtml
@@ -13,7 +13,7 @@
                     <th>Date/Time</th>
                     <th>Group Size</th>
                     <th>Email</th>
-                    <th>Phone Numnber</th>
+                    <th>Phone Number</th>
                 </tr>
             </thead>
             <tbody>
