comment appts view

--- a/SignUpGenie/Views/Home/Appointments.cshtml
+++ b/SignUpGenie/Views/Home/Appointments.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<Tour>
-
+<!--Dynamically prints out the tour data for tours that have been booked-->
 <div class="ml-5">
     <h1>Scheduled Tours</h1>
 
